--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,4 +98,6 @@ dependencies {
     // Image Loading library Coil
     implementation "io.coil-kt:coil:0.13.0"
 
+    implementation "com.google.android.gms:play-services-location:17.1.0"
+    implementation 'pub.devrel:easypermissions:3.0.0'
 }
