--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,6 +98,11 @@ dependencies {
     // Image Loading library Coil
     implementation "io.coil-kt:coil:0.13.0"
 
+    // user Location
     implementation "com.google.android.gms:play-services-location:17.1.0"
     implementation 'pub.devrel:easypermissions:3.0.0'
+
+    // Shimmer
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
+    implementation 'com.todkars:shimmer-recyclerview:0.4.0'
 }
