--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,4 +109,8 @@ dependencies {
     // Shimmer
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
     implementation 'com.todkars:shimmer-recyclerview:0.4.0'
+
+    //  DataStore
+    implementation "androidx.datastore:datastore-preferences:1.0.0-alpha06"
+
 }
