stepperView in requestDetails Fragment and custom search view with custom menu to sign out

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,4 +113,7 @@ dependencies {
     //  DataStore
     implementation "androidx.datastore:datastore-preferences:1.0.0-alpha06"
 
+    // Stepper View
+    implementation 'com.shuhart.stepview:stepview:1.2.6'
+
 }
