--- a/app/build.gradle
+++ b/app/build.gradle
@@ -127,4 +127,6 @@ dependencies {
     // FCM
     implementation 'com.google.firebase:firebase-messaging-ktx'
     implementation 'com.google.firebase:firebase-analytics-ktx'
+
+    implementation 'com.google.firebase:firebase-messaging:21.0.1'
 }
